objects/AcctSeed__Ledger__c/fields/AcctSeed__Accounting_Method__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Accounting_Method__c</fullName>
    <inlineHelpText>Select the Accounting Method for this Ledger.</inlineHelpText>
    <label>Accounting Method</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accrual</fullName>
                <default>true</default>
                <label>Accrual</label>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Accrual and Cash</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>