objects/AcctSeed__Ledger__c/fields/AcctSeed__Accounting_Method_Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Accounting_Method_Last_Modified_Date__c</fullName>
    <inlineHelpText>This date automatically populates when the Accounting Method is changed on the ledger. If the Accounting Method is “Accrual and Cash”, then this date will be on both the primary and shadow ledgers.</inlineHelpText>
    <label>Accounting Method Last Modified Date</label>
    <type>DateTime</type>
</CustomField>