objects/AcctSeed__Ledger__c/fields/AcctSeed__Active__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>This checkbox indicates if the ledger is active. Please contact Accounting Seed Support to edit this field.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>