objects/AcctSeed__Ledger__c/fields/AcctSeed__Address__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Address</label>
    <referenceTo>AcctSeed__Address__c</referenceTo>
    <relationshipLabel>Ledgers</relationshipLabel>
    <relationshipName>Ledgers</relationshipName>
    <type>Lookup</type>
</CustomField>