objects/AcctSeed__Ledger__c/fields/AcctSeed__Application_Id__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Application_Id__c</fullName>
    <label>Application Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>