objects/AcctSeed__Ledger__c/fields/AcctSeed__Application_URL__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Application_URL__c</fullName>
    <label>Application URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>