objects/AcctSeed__Ledger__c/fields/AcctSeed__Consolidation_Ledger_ID__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Consolidation_Ledger_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Consolidation Ledger ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>