objects/AcctSeed__Ledger__c/fields/AcctSeed__Default_Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Default_Bank_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is the account that the majority of payments are made from and that deposits are made to. When entering a cash receipt it will default to this bank account. When creating a cash disbursement batch it will default to this account.</inlineHelpText>
    <label>Default Bank Account</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Only GL Accounts with Bank checked are allowed.</errorMessage>
        <filterItems>
            <field>AcctSeed__GL_Account__c.AcctSeed__Bank__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AcctSeed__GL_Account__c</referenceTo>
    <relationshipLabel>Ledgers</relationshipLabel>
    <relationshipName>Default_Bank_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>