objects/AcctSeed__Ledger__c/fields/AcctSeed__Default_Payment_Processor__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Default_Payment_Processor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Used to determine the billing&apos;s payment processor. The system&apos;s order of precedence is first, the default payment processor on the billing&apos;s account, then the default payment processor on the billing&apos;s ledger, then the global default payment processor.</inlineHelpText>
    <label>Default Payment Processor</label>
    <referenceTo>AcctSeed__Payment_Processor__c</referenceTo>
    <relationshipLabel>Ledgers</relationshipLabel>
    <relationshipName>Ledgers</relationshipName>
    <type>Lookup</type>
</CustomField>