objects/AcctSeed__Ledger__c/fields/AcctSeed__Description__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Description__c</fullName>
    <inlineHelpText>Used to describe budget ledgers.</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>