objects/AcctSeed__Ledger__c/fields/AcctSeed__Enable_Pre_Tax_Discount_Calculation__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Enable_Pre_Tax_Discount_Calculation__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When enabled, discounts on billings will be calculated on a pre-tax basis (Sub-Total).  When unchecked, discounts will be calculated on the Total.</inlineHelpText>
    <label>Enable Pre-Tax Discount Calculation</label>
    <type>Checkbox</type>
</CustomField>