objects/AcctSeed__Ledger__c/fields/AcctSeed__Is_Shadow__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Is_Shadow__c</fullName>
    <formula>AND(NOT(ISBLANK(AcctSeed__Related_Ledger__c)), ISPICKVAL(AcctSeed__Accounting_Method__c , &apos;Cash&apos;),  ISPICKVAL(AcctSeed__Related_Ledger__r.AcctSeed__Accounting_Method__c, &apos;Accrual and Cash&apos;) )</formula>
    <label>Is Shadow</label>
    <type>Checkbox</type>
</CustomField>