objects/AcctSeed__Ledger__c/fields/AcctSeed__Logo__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Logo__c</fullName>
    <inlineHelpText>This value should mirror the ExtId value on a Logo image file related to this Ledger</inlineHelpText>
    <label>Logo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>