objects/AcctSeed__Ledger__c/fields/AcctSeed__Payment_Notifications_Email__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Payment_Notifications_Email__c</fullName>
    <inlineHelpText>Enter the email where payment notifications should be sent for the selected Ledger.</inlineHelpText>
    <label>Payment Notifications Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>