objects/AcctSeed__Ledger__c/fields/AcctSeed__Payment_Services_Company_Code__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Payment_Services_Company_Code__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Unique identifier for the business entity in Payment Services.</inlineHelpText>
    <label>Payment Services Company Code</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>