objects/AcctSeed__Ledger__c/fields/AcctSeed__Payment_Services_Enrollment_Status__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Payment_Services_Enrollment_Status__c</fullName>
    <inlineHelpText>Indicates the status of the enrollment of the ledger with Payment Services.</inlineHelpText>
    <label>Payment Services Enrollment Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Enrolled</fullName>
                <default>true</default>
                <label>Not Enrolled</label>
            </value>
            <value>
                <fullName>Initialized</fullName>
            </value>
            <value>
                <fullName>Registered</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Pending Customer Signature</fullName>
            </value>
            <value>
                <fullName>In Review</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>