objects/AcctSeed__Ledger__c/fields/AcctSeed__Payment_Withdrawal_Method__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Payment_Withdrawal_Method__c</fullName>
    <inlineHelpText>Select &quot;By Transaction&quot; to withdraw individual amounts for each payment transaction.</inlineHelpText>
    <label>Payment Withdrawal Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>By Transaction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>