objects/AcctSeed__Ledger__c/fields/AcctSeed__Related_Ledger__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Related_Ledger__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This will be set automatically if the Accounting Method on the Ledger is “Accrual and Cash”.</inlineHelpText>
    <label>Related Ledger</label>
    <referenceTo>AcctSeed__Ledger__c</referenceTo>
    <relationshipLabel>Related Ledgers</relationshipLabel>
    <relationshipName>Related_Ledgers</relationshipName>
    <type>Lookup</type>
</CustomField>