objects/AcctSeed__Ledger__c/fields/AcctSeed__Tax_Settings__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Tax_Settings__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The tax settings that will be associated with the ledger.</inlineHelpText>
    <label>Tax Settings</label>
    <lookupFilter>
        <active>false</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>$Source.AcctSeed__Accounting_Method__c</field>
            <operation>equals</operation>
            <value>Accrual</value>
        </filterItems>
        <filterItems>
            <field>AcctSeed__Tax_Settings__c.AcctSeed__Tax_Settings_Method__c</field>
            <operation>notEqual</operation>
            <value>AvaTax</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>AcctSeed__Tax_Settings__c</referenceTo>
    <relationshipLabel>Ledgers</relationshipLabel>
    <relationshipName>Ledgers</relationshipName>
    <type>Lookup</type>
</CustomField>