objects/AcctSeed__Ledger__c/fields/AcctSeed__TIN__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__TIN__c</fullName>
    <inlineHelpText>Enter the taxpayer identification number for the business entity.</inlineHelpText>
    <label>Taxpayer Identification Number</label>
    <length>120</length>
    <type>Text</type>
</CustomField>