objects/AcctSeed__Ledger__c/fields/AcctSeed__Type__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Type__c</fullName>
    <inlineHelpText>You can only create one transactional ledger by default. Contact Accounting Seed Support for assistance in creating additional transactional ledgers.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Budget</fullName>
                <default>true</default>
                <label>Budget</label>
            </value>
            <value>
                <fullName>Transactional</fullName>
            </value>
            <value>
                <fullName>Consolidations-Transactional</fullName>
            </value>
            <value>
                <fullName>Consolidations-Budget</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>